--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,6 @@
-
 unbind C-b
 set -g prefix C-Space
 
-set -g default-terminal "tmux-256color"
 set -g mouse on
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -11,8 +9,12 @@ bind -n C-l select-pane -R
 
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
+#set -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+set-option -g focus-events on
+set-option -sg escape-time 10
+set-option -sa terminal-overrides ',alacritty:RGB'
+source-file ~/.tmux/iceberg_minimal.tmux.conf
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
-
