--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -14,7 +14,7 @@ set -ga terminal-overrides ",alacritt*:Tc"
 set -ga terminal-overrides ",kitty*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
-source-file ~/.tmux/iceberg_minimal.tmux.conf
+source-file ~/.tmux/own.conf
 #source-file ~/.tmux/iceberg.tmux.conf
 
 unbind r
