--- a/dots/.tmux/iceberg_minimal.tmux.conf
+++ b/dots/.tmux/iceberg_minimal.tmux.conf
@@ -4,6 +4,7 @@
 
 set -g status-position bottom
 set -g status-justify centre
+#set -g status-style "bg=#1e2132"
 set -g status-style "bg=#1e2132"
 set -g window-style ""
 set -g window-active-style ""
