--- a/dots/.config/alacritty/alacritty.yml
+++ b/dots/.config/alacritty/alacritty.yml
@@ -108,22 +108,22 @@ colors: *tomorrow
 
 font:
   normal:
-    family: Monospace
+    family: Ubuntu Mono
     style: Regular
 
   bold:
-    family: Monospace
+    family: Ubuntu Mono
     style: Bold
 
   italic:
-    family: Monospace
+    family: Ubuntu Mono
     style: Italic
 
   bold_italic:
-    family: Monospace
+    family: Ubuntu Mono
     style: Bold Italic
 
-  size: 15
+  size: 18
 
 window:
   opacity: 0.8
