--- a/dots/.config/alacritty/alacritty.yml
+++ b/dots/.config/alacritty/alacritty.yml
@@ -1,6 +1,5 @@
 # Colors (Tomorrow Night Bright)
-  # Default colors
-  # Colors (Tomorrow Night Bright)
+# Colors (Tomorrow Night Bright)
 schemes: 
   tokyo-night-storm: &tokyo-night
     primary:
@@ -122,43 +121,44 @@ schemes:
       - { index: 17, color: '0xF5E0DC' }
 
 
-        # Colors (Nightfly)
-nightfly: &nightfly
-   # Default colors
-  primary:
-     background: '#011627'
-     foreground: '#acb4c2'
+  # Colors (Nightfly)
+  nightfly: &nightfly
+     # Default colors
+    primary:
+       background: '#011627'
+       foreground: '#acb4c2'
 
-  cursor:
-    text: '#fafafa'
-    cursor: '#9ca1aa'
+    cursor:
+      text: '#fafafa'
+      cursor: '#9ca1aa'
 
-  selection:
-    text: '#080808'
-    background: '#b2ceee'
+    selection:
+      text: '#080808'
+      background: '#b2ceee'
 
-   # Normal colors
-  normal:
-    black:   '#1d3b53'
-    red:     '#fc514e'
-    green:   '#a1cd5e'
-    yellow:  '#e3d18a'
-    blue:    '#82aaff'
-    magenta: '#c792ea'
-    cyan:    '#7fdbca'
-    white:   '#a1aab8'
+     # Normal colors
+    normal:
+      black:   '#1d3b53'
+      red:     '#fc514e'
+      green:   '#a1cd5e'
+      yellow:  '#e3d18a'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#7fdbca'
+      white:   '#a1aab8'
 
-   # Bright colors
-  bright:
-    black:   '#7c8f8f'
-    red:     '#ff5874'
-    green:   '#21c7a8'
-    yellow:  '#ecc48d'
-    blue:    '#82aaff'
-    magenta: '#ae81ff'
-    cyan:    '#7fdbca'
-    white:   '#d6deeb'
-colors: *tokyo-night
+     # Bright colors
+    bright:
+      black:   '#7c8f8f'
+      red:     '#ff5874'
+      green:   '#21c7a8'
+      yellow:  '#ecc48d'
+      blue:    '#82aaff'
+      magenta: '#ae81ff'
+      cyan:    '#7fdbca'
+      white:   '#d6deeb'
+
+colors: *tomorrow
 
 font:
   normal:
@@ -180,5 +180,5 @@ font:
   size: 18
 
 window:
-  opacity: 1
+  opacity: 0.7
     #decoration: none
