--- a/dots/.config/i3status/config
+++ b/dots/.config/i3status/config
@@ -18,7 +18,7 @@ general {
 
 order += "run_watch DHCP"
 order += "run_watch VPN"
-order += "wireless _first_"
+#order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
 order += "volume master"
