--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -14,7 +14,7 @@ set $mod4 Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Source Code Pro 10
+font pango:Jetbrains Mono 10
 
 default_border pixel 1
 hide_edge_borders vertical
@@ -30,6 +30,7 @@ for_window [class="Kitty"] floating enable
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+exec_always mako
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -51,8 +52,8 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec brightnessctl  set +6% # increase screen brightness
-bindsym XF86MonBrightnessDown exec brightnessctl set 6%-# decrease screen brightness
+bindsym XF86MonBrightnessUp exec brightnessctl  set +5% # increase screen brightness
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-# decrease screen brightness
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
@@ -68,15 +69,15 @@ floating_modifier $mod
 bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+T exec kitty
 bindsym $mod+n workspace next
-#bindsym $mod+p workspace prev
+bindsym $mod+Shift+b workspace prev
 
 # kill focused window
 bindsym $mod+Shift+w kill
 
 # start dmenu (a program launcher)
-bindsym $mod+Shift+d exec --no-startup-id dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id "rofi -show run"
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+ #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -167,22 +168,10 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# move focused container to workspace
-#bindsym $mod+F1 move container to workspace number $ws1
-#bindsym $mod+F2 move container to workspace number $ws2
-#bindsym $mod+F3 move container to workspace number $ws3
-#bindsym $mod+F4 move container to workspace number $ws4
-#bindsym $mod+F5 move container to workspace number $ws5
-#bindsym $mod+F6 move container to workspace number $ws6
-#bindsym $mod+F7 move container to workspace number $ws7
-#bindsym $mod+F8 move container to workspace number $ws8
-#bindsym $mod+F9 move container to workspace number $ws9
-#bindsym $mod+0 move container to workspace number $ws10
-
 # reload the configuration file
 bindsym $mod+Shift+R reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+P restart
+bindsym $mod+p restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "swaynag -t warning -m 'Outside World....' -B 'Let me out' 'i3-msg exit'"
 
@@ -195,9 +184,9 @@ mode "resize" {
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
         bindsym h resize shrink width 10 px or 10 ppt
-        bindsym t resize grow height 10 px or 10 ppt
-        bindsym n resize shrink height 10 px or 10 ppt
-        bindsym s resize grow width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -211,7 +200,7 @@ mode "resize" {
         bindsym $mod+p mode "default"
 }
 
-bindsym $mod+p mode "resize"
+bindsym $mod+Shift+P mode "resize"
 bindsym $mod+Shift+S exec slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'grim_%Y-%m-%d-%H%M%S.png')
 
 
@@ -219,18 +208,22 @@ bindsym $mod+Shift+S exec slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'gr
 # finds out, if available)
 bar {
         #status_command i3status --transparency
-	status_command i3status 
+    mode hide
+    status_command waybar
 }
 
-#input * {
-    #xkb_layout "us"
-    #xkb_variant "dvorak"
-#}
+gaps outer 6
+gaps inner 6
+
+#<colorclass> <border> <background> <text> <indicator> <child_border>
+client.unfocused #01121A #01121A  #986e75  #ff8da1
+client.focused #672934 #672934  #cab3b6  #ff8da1
+#seat seat0 xcursor_theme Qogir 25
+
 input type:keyboard {
-    xkb_layout us(dvp),us(dvorak),
+    xkb_layout us(dvorak),us(dvp),
     xkb_options grp:ctrls_toggle
     #xkb_options grp:rctrl_switch
-    #rctrl_switch
 }
 
 input type:touchpad {
@@ -240,7 +233,7 @@ input type:touchpad {
     middle_emulation enabled
 }
 
-output "*" bg ~/Pictures/wallpapers/breakingbad.jpg fill
+output "*" bg ~/Pictures/wallpapers/sakura.jpg fill
 
 #set $lock swaylock -c 550000
 #exec swayidle -w \
@@ -254,8 +247,3 @@ exec swayidle -w \
     timeout 400 'swaymsg "output * dpms off"' \
      resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
-
-#<colorclass> <border> <background> <text> <indicator> <child_border>
-client.focused #ff748c #ff8da1  #000000  #ff8da1
-seat seat0 xcursor_theme Qogir 25
-#exec_always fcitx5 -d --replace
