--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -43,6 +43,8 @@ exec_always mako
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec systemctl --user import-environment
+exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -85,7 +87,6 @@ bindsym $mod+Shift+d exec --no-startup-id "rofi -show run"
 
 # change focus
 bindsym $mod+h focus left
-bindsym $mod+c focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
