--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -11,6 +11,7 @@ bind -n C-l select-pane -R
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
 set -ga terminal-overrides ",alacritt*:Tc"
+set -ga terminal-overrides ",foot*:Tc"
 set -ga terminal-overrides ",kitty*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
