--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -130,7 +130,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus parent
 
 
 
@@ -237,7 +237,7 @@ input type:touchpad {
     middle_emulation enabled
 }
 
-output "*" bg ~/Pictures/wallpapers/japgirl.jpg fill
+output "*" bg ~/Pictures/wallpapers/dark-cat-rosewater.png fill
 
 exec swayidle -w \
     timeout 300 'swaylock -f -i ~/Pictures/wallpapers/trash.jpg fill' \
