--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -17,7 +17,7 @@ set $mod4 Mod4
 font pango:Jetbrains Mono 10
 
 default_border pixel 3
-hide_edge_borders vertical
+#hide_edge_borders vertical
 default_floating_border pixel 1
 
 for_window [class="Kitty"] floating enable
@@ -110,7 +110,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod4+Shift+d split h
+bindsym  $mod+Shift+v split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -131,8 +131,6 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+Shift+a focus parent
-
-
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -237,10 +235,10 @@ input type:touchpad {
     middle_emulation enabled
 }
 
-output "*" bg ~/Pictures/wallpapers/dark-cat-rosewater.png fill
+output "*" bg ~/Pictures/wallpapers/stray_neon.png fill
 
 exec swayidle -w \
-    timeout 300 'swaylock -f -i ~/Pictures/wallpapers/trash.jpg fill' \
+    timeout 300 'swaylock -f -i ~/Pictures/wallpapers/pc_crash.png fill' \
     timeout 400 'swaymsg "output * dpms off"' \
      resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
