--- a/dots/.config/alacritty/alacritty.yml
+++ b/dots/.config/alacritty/alacritty.yml
@@ -1,7 +1,66 @@
 # Colors (Tomorrow Night Bright)
 # Colors (Tomorrow Night Bright)
 schemes: 
-  # Colors (Pencil Light)
+# Colors (Gruvbox dark)
+  gruvbox: &gruvbox
+    primary:
+      # hard contrast background - '#1d2021'
+      #background: &gruvbox_dark_bg '#282828'
+      background: '#282828'
+      # soft contrast background - '#32302f'
+      foreground:        '#ebdbb2'
+      bright_foreground: '#fbf1c7'
+      dim_foreground:    '#a89984'
+    #cursor:
+      #text:   CellBackground
+      #cursor: CellForeground
+    #vi_mode_cursor:
+      #text:   CellBackground
+      #cursor: CellForeground
+    # search:
+    #   matches:
+    #     foreground: '#000000'
+    #     background: '#ffffff'
+    #   focused_match:
+    #    foreground: CellBackground
+    #    background: CellForeground
+    #   bar:
+    #     background: ''
+    #     foreground: ''
+    # line_indicator:
+    #   foreground: None
+    #   background: None
+    selection:
+      text:       CellBackground
+      background: CellForeground
+    bright:
+      black:   '#928374'
+      red:     '#fb4934'
+      green:   '#b8bb26'
+      yellow:  '#fabd2f'
+      blue:    '#83a598'
+      magenta: '#d3869b'
+      cyan:    '#8ec07c'
+      white:   '#ebdbb2'
+    normal:
+      black:   '#282828'
+      red:     '#cc241d'
+      green:   '#98971a'
+      yellow:  '#d79921'
+      blue:    '#458588'
+      magenta: '#b16286'
+      cyan:    '#689d6a'
+      white:   '#a89984'
+    dim:
+      black:   '#32302f'
+      red:     '#9d0006'
+      green:   '#79740e'
+      yellow:  '#b57614'
+      blue:    '#076678'
+      magenta: '#8f3f71'
+      cyan:    '#427b58'
+      white:   '#928374'
+
 
   tokyo-night-storm: &tokyo-night
     primary:
@@ -57,6 +116,7 @@ schemes:
       magenta: '0xbb9af7'
       cyan:    '0x0db9d7'
       white:   '0xacb0d0'
+
   tomorrow_night: &tomorrow
     # colors:
     # Default colors
@@ -490,27 +550,27 @@ schemes:
       - { index: 16, color: '#FAB387' }
       - { index: 17, color: '#F5E0DC' }
 
-colors: *macchiato
+colors: *tomorrow
 
 font:
   normal:
-    family: Ubuntu Mono
+    family: Fira Code
     style: Regular
 
   bold:
-    family: Ubuntu Mono
+    family: Fira Code
     style: Bold
 
   italic:
-    family: Ubuntu Mono
+    family: Fira Code
     style: Italic
 
   bold_italic:
-    family: Ubuntu Mono
+    family: Fira Code
     style: Bold Italic
 
-  size: 17
+  size: 14
 
 window:
-  opacity: 1
+  opacity: 0.6
     #decoration: none
