--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,7 +1,8 @@
 unbind C-b
 set -g prefix C-Space
 
-set -g default-terminal "tmux-256color"
+#set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set -g mouse on
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -10,11 +11,13 @@ bind -n C-l select-pane -R
 
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",alacritt*:Tc"
-set -ga terminal-overrides ",foot*:Tc"
-set -ga terminal-overrides ",kitty*:Tc"
+set -ga terminal-overrides ",alacritty*:Tc"
+#set -ga terminal-overrides ",foot*:Tc"
+#set -ga terminal-overrides ",kitty*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
+set -g base-index 1
+#setw -g pane-base-index 1
 source-file ~/.tmux/own.conf
 #source-file ~/.tmux/iceberg.tmux.conf
 
