--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -16,9 +16,13 @@ set $mod4 Mod4
 # is used in the bar {} block below.
 font pango:Jetbrains Mono 10
 
-default_border pixel 3
+default_border pixel 4
+#default_border none
 #hide_edge_borders vertical
-default_floating_border pixel 3
+#default_floating_border pixel 3
+default_floating_border normal
+#new_window none
+
 
 #for_window [class="alacritty"] pixel none
 
@@ -31,6 +35,8 @@ default_floating_border pixel 3
 exec --no-startup-id dex --autostart --environment i3
 #bindsym $mod+c exec makoctl dismiss
 exec_always mako
+exec_always --no-startup-id killall back4.sh 
+exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -69,7 +75,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec gnome-terminal --hide-menubar
 bindsym $mod+Shift+T exec kitty
 bindsym $mod4+n exec nautilus
 bindsym $mod+n workspace next
@@ -248,11 +254,10 @@ client.focused #672934 #672934  #cab3b6  #ff8da1
 
 #output "*" bg ~/Pictures/wallpapers/cyber_girl.jpg fill
 
-
-#exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
-#exec xautolock -time 6 -locker 'i3lock -e -c 223344'
-#exec swayidle -w \
-    #timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
-    #timeout 400 'swaymsg "output * dpms off"' \
-     #resume 'swaymsg "output * dpms on"' \
-    #before-sleep 'swaylock -f -c 000000'
+exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
+exec xautolock -time 6 -locker 'i3lock -e -c 223344'
+exec swayidle -w \
+    timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
+    timeout 400 'swaymsg "output * dpms off"' \
+     resume 'swaymsg "output * dpms on"' \
+    before-sleep 'i3lock -f -c 000000'
