--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
 set -g prefix C-Space
 
-#set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
 #set -g default-terminal "xterm-256color"
 set -g mouse on
 bind -n C-h select-pane -L
@@ -10,10 +10,10 @@ bind -n C-s select-pane -U
 bind -n C-l select-pane -R
 
 # Enable RGB colour if running in xterm(1)
-set-option -sa terminal-overrides ",xterm*:Tc"
+#set-option -sa terminal-overrides ",xterm*:Tc"
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
-#set -ga terminal-overrides ",alacritty*:Tc"
+set -ga terminal-overrides ",alacritty*:Tc"
 #set -ga terminal-overrides ",foot*:Tc"
 #set -ga terminal-overrides ",kitty*:Tc"
 set-option -sg escape-time 10
