a few tweaks nvim tmux

--- a/dots/.tmux/own.conf
+++ b/dots/.tmux/own.conf
@@ -6,7 +6,7 @@ set -g window-style ""
 set -g window-active-style ""
 
 module_left_1="#h"
-module_left_2=":: #S"
+module_left_2=">> [ #S ]"
 
 #set -g status-left " #[fg=#c6c8d1]$module_left_1 #[fg=#6b7089]$module_left_2"
 set -g status-left " #[fg=#ff8da1]$module_left_1 #[fg=#ff748c]$module_left_2"
