--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -16,7 +16,7 @@ set $mod4 Mod4
 # is used in the bar {} block below.
 font pango:Jetbrains Mono 10
 
-default_border pixel 4
+default_border pixel 2
 #default_border none
 #hide_edge_borders vertical
 #default_floating_border pixel 3
@@ -35,6 +35,7 @@ default_floating_border normal
 exec --no-startup-id dex --autostart --environment i3
 #bindsym $mod+c exec makoctl dismiss
 exec_always mako
+exec_always picom
 exec_always --no-startup-id killall back4.sh 
 exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
 
@@ -75,13 +76,17 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec gnome-terminal --hide-menubar
+#bindsym $mod+Return exec gnome-terminal --hide-menubar
+bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+T exec kitty
 bindsym $mod4+n exec nautilus
 bindsym $mod+n workspace next
 bindsym $mod+Shift+b workspace prev
 bindsym $mod4+u exec boomer
 for_window [title="\ -\ Sharing\ Indicator$"] floating enable, sticky enable
+for_window [title="\ -\(DEBUG)"] floating enable 
+for_window [title="Godot"] floating enable 
+for_window [title="Planner"] floating enable 
 #for_window [title="firefox"] sticky enable
 for_window [title="qemu"] floating enable
 for_window [class="kitty"] floating enable
@@ -235,29 +240,17 @@ bar {
 #gaps inner 6
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
-client.unfocused #01121A #01121A  #986e75  #ff8da1
-client.focused #672934 #672934  #cab3b6  #ff8da1
-#seat seat0 xcursor_theme Adwaita 30
-
-#input type:keyboard {
-    #xkb_layout us(dvorak)
-    #xkb_options grp:ctrls_toggle
-    ##xkb_options grp:rctrl_switch
-#}
-
-#input type:touchpad {
-    #tap enabled
-    #natural_scroll enabled
-    ##drag enabled
-    #middle_emulation enabled
-#}
+#client.unfocused #01121A #01121A  #986e75  #ff8da1
+#client.focused #672934 #672934  #cab3b6  #ff8da1
+client.unfocused #000000 #000000  #986e75  #ff8da1
+client.focused #F5BDE6 #F0C6C6  #000000  #ff8da1
 
 #output "*" bg ~/Pictures/wallpapers/cyber_girl.jpg fill
 
-exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
+#exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
 exec xautolock -time 6 -locker 'i3lock -e -c 223344'
-exec swayidle -w \
-    timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
-    timeout 400 'swaymsg "output * dpms off"' \
-     resume 'swaymsg "output * dpms on"' \
-    before-sleep 'i3lock -f -c 000000'
+#exec swayidle -w \
+    #timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
+    #timeout 400 'swaymsg "output * dpms off"' \
+     #resume 'swaymsg "output * dpms on"' \
+    #before-sleep 'i3lock -f -c 000000'
