--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,8 +1,6 @@
 unbind C-b
 set -g prefix C-Space
 
-set -g default-terminal "tmux-256color"
-#set -g default-terminal "xterm-256color"
 set -g mouse on
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -10,10 +8,12 @@ bind -n C-s select-pane -U
 bind -n C-l select-pane -R
 
 # Enable RGB colour if running in xterm(1)
-#set-option -sa terminal-overrides ",xterm*:Tc"
+
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",alacritty*:Tc"
+#set -ga terminal-overrides ",alacritty*:Tc"
 #set -ga terminal-overrides ",foot*:Tc"
 #set -ga terminal-overrides ",kitty*:Tc"
 set-option -sg escape-time 10
@@ -22,6 +22,10 @@ set -g base-index 1
 #setw -g pane-base-index 1
 source-file ~/.tmux/own.conf
 #source-file ~/.tmux/iceberg.tmux.conf
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
