--- a/dots/.tmux/iceberg_minimal.tmux.conf
+++ b/dots/.tmux/iceberg_minimal.tmux.conf
@@ -4,19 +4,19 @@
 
 set -g status-position bottom
 set -g status-justify centre
-#set -g status-style "bg=#1e2132"
-set -g status-style "bg=#1e2132"
+set -g status-style "bg=#10002b"
 set -g window-style ""
-set -g window-active-style ""
+set -g window-active-style "#e0aaff"
 
 # modules
 module_left_1="#h"
-module_left_2="#{client_width}x#{client_height}"
+module_left_2="[ #S ] "
+#module_left_2="#{client_width}x#{client_height}"
 
-module_right_1="%a %d %b"
+#module_right_1="%a %d %b"
 module_right_2="%R %Z"
 
-set -g status-left " #[fg=#c6c8d1]$module_left_1 #[fg=#6b7089]$module_left_2"
+set -g status-left " #[fg=#E0AAFF]$module_left_1 #[fg=#E0AAFF]$module_left_2"
 set -g status-left-style ""
 set -g status-left-length 50
 
@@ -25,10 +25,10 @@ set -g status-right-style "fg=#6b7089"
 set -g status-right-length 25
 
 set -g window-status-current-style "bold"
-set -g window-status-style "fg=#6b7089"
-set -g window-status-format " #[fg=#c6c8d1]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-set -g window-status-current-format " #[fg=#c6c8d1]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-style "fg=#E0AAFF"
+set -g window-status-format " #[fg=#7B2CBF]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-current-format " #[fg=#E0AAFF]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
 set -g window-status-separator ""
 
-set -g pane-active-border-style "fg=#6b7089"
-set -g pane-border-style "fg=#6b7089"
+#set -g pane-active-border-style "fg=#71c7ec"
+#set -g pane-border-style "fg=#71c7ec"
