--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -14,9 +14,10 @@ set $mod4 Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Jetbrains Mono 10
+font pango:Ubuntu Mono 13
 
-default_border pixel 2
+#default_border pixel 2
+for_window [class=".*"] border pixel 0
 #default_border none
 #hide_edge_borders vertical
 #default_floating_border pixel 3
@@ -34,10 +35,12 @@ default_floating_border normal
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 #bindsym $mod+c exec makoctl dismiss
+exec polybar example &
 exec_always mako
 exec_always picom
 exec_always --no-startup-id killall back4.sh 
-exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
+# exec_always --no-startup-id back4.sh 0.03 $HOME/Pictures/pixel_snow_mountain.gif
+exec_always feh --bg-fill $HOME/Pictures/wallpapers/dark-cat-rosewater.png
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -51,7 +54,7 @@ exec --no-startup-id xss-lock -- i3lock
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 exec systemctl --user import-environment
-exec setxkbmap dvorak
+exec setxkbmap us dvorak
 #exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # Use pactl to adjust volume in PulseAudio.
@@ -79,7 +82,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec gnome-terminal --hide-menubar
 bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+T exec kitty
-bindsym $mod4+n exec nautilus
+bindsym $mod4+n exec thunar
 bindsym $mod+n workspace next
 bindsym $mod+Shift+b workspace prev
 bindsym $mod4+u exec boomer
@@ -87,18 +90,20 @@ for_window [title="\ -\ Sharing\ Indicator$"] floating enable, sticky enable
 for_window [title="\ -\(DEBUG)"] floating enable 
 for_window [title="Godot"] floating enable 
 for_window [title="Planner"] floating enable 
-#for_window [title="firefox"] sticky enable
+for_window [class="OpenGL"] floating enable 
 for_window [title="qemu"] floating enable
 for_window [class="kitty"] floating enable
 for_window [class="sdl" instance="sdl"] floating enable
 for_window [class="Nautilus"] floating enable
+for_window [class="Zoom"] floating enable
+for_window [class="Thunar"] floating enable
 bindsym $mod+r sticky toggle
 
 # kill focused window
 bindsym $mod+Shift+w kill
 
 # start dmenu (a program launcher)
-bindsym $mod+Shift+d exec --no-startup-id "rofi -show run"
+bindsym $mod+Shift+d exec --no-startup-id "rofi -show run -font 'Ubuntu Mono 17'"
 # A more modern dmenu replacement is rofi:
  #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -155,10 +160,10 @@ bindsym $mod+Shift+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -196,7 +201,7 @@ bindsym $mod+Shift+R reload
 bindsym $mod+p restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "swaynag -t warning -m 'Outside World....' -B 'Let me out' 'i3-msg exit'"
-bindsym $mod+Shift+e exit
+bindsym $mod4+Shift+e exit
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -232,25 +237,21 @@ bindsym $mod+Shift+S exec flameshot gui
 # finds out, if available)
 bar {
     #status_command i3status --transparency
-    #mode hide
-    status_command i3blocks
+    mode hide
+    #status_command i3blocks
 }
 
-#gaps outer 6
-#gaps inner 6
+gaps outer 3
+gaps inner 2
+
+smart_borders on
+smart_gaps on
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
 #client.unfocused #01121A #01121A  #986e75  #ff8da1
 #client.focused #672934 #672934  #cab3b6  #ff8da1
 client.unfocused #000000 #000000  #986e75  #ff8da1
-client.focused #F5BDE6 #F0C6C6  #000000  #ff8da1
-
-#output "*" bg ~/Pictures/wallpapers/cyber_girl.jpg fill
+client.focused #10002b  #10002b #e0aaff  #ff8da1
 
 #exec xautolock -time 6 -locker 'i3lock -e -c 223344 && echo mem > /sys/power/state'
-exec xautolock -time 6 -locker 'i3lock -e -c 223344'
-#exec swayidle -w \
-    #timeout 300 'swaylock -f -i ~/Pictures/wallpapers/blue_night.jpg fill' \
-    #timeout 400 'swaymsg "output * dpms off"' \
-     #resume 'swaymsg "output * dpms on"' \
-    #before-sleep 'i3lock -f -c 000000'
+#exec xautolock -time 6 -locker 'i3lock -e -c 223344'
