--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -9,8 +9,9 @@ bind -n C-l select-pane -R
 
 # Enable RGB colour if running in xterm(1)
 
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+# set -g default-terminal "tmux-256color"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',alacritty:RGB'
 #set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
 #set -ga terminal-overrides ",alacritty*:Tc"
@@ -20,8 +21,8 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set -g base-index 1
 #setw -g pane-base-index 1
-source-file ~/.tmux/own.conf
-#source-file ~/.tmux/iceberg.tmux.conf
+#source-file ~/.tmux/own.conf
+source-file ~/.tmux/iceberg_minimal.tmux.conf
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
