--- a/dots/.config/i3status/config
+++ b/dots/.config/i3status/config
@@ -17,9 +17,9 @@ general {
 }
 
 order += "run_watch DHCP"
-order += "run_watch VPN"
-#order += "wireless _first_"
-order += "ethernet _first_"
+# order += "run_watch VPN"
+order += "wireless _first_"
+# order += "ethernet _first_"
 order += "battery 0"
 order += "volume master"
 order += "tztime local"
