--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -2,10 +2,10 @@ unbind C-b
 set -g prefix C-Space
 
 set -g mouse on
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-s select-pane -U
-bind -n C-l select-pane -R
+##bind -n C-h select-pane -L
+#bind -n C-j select-pane -D
+#bind -n C-s select-pane -U
+#bind -n C-l select-pane -R
 
 # Enable RGB colour if running in xterm(1)
 
@@ -22,7 +22,7 @@ set-option -g focus-events on
 set -g base-index 1
 #setw -g pane-base-index 1
 #source-file ~/.tmux/own.conf
-source-file ~/.tmux/iceberg_minimal.tmux.conf
+source-file ~/.tmux/rose-pine.conf
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
