--- a/dots/.tmux/.tmux/rose-pine.conf
+++ b/dots/.tmux/.tmux/rose-pine.conf
@@ -1,10 +1,8 @@
-# FILE: iceberg_minimal.tmux.conf
-# REPO: https://github.com/gkeep/iceberg-dark
-# MAINTAINER: gkeep <gkeep77@protonmail.com>
 
+#rose
 set -g status-position bottom
 set -g status-justify centre
-set -g status-style "bg=#10002b"
+set -g status-style "bg=#191724"
 set -g window-style ""
 set -g window-active-style "#e0aaff"
 
@@ -25,9 +23,9 @@ set -g status-right-style "fg=#6b7089"
 set -g status-right-length 25
 
 set -g window-status-current-style "bold"
-set -g window-status-style "fg=#E0AAFF"
-set -g window-status-format " #[fg=#7B2CBF]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-set -g window-status-current-format " #[fg=#E0AAFF]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-style "fg=#EEEEFF"
+set -g window-status-format " #[fg=#ebbcba]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-current-format " #[fg=#eb6f92]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
 set -g window-status-separator ""
 
 #set -g pane-active-border-style "fg=#71c7ec"
